Layout problems fixed + Background image fixed

--- a/src/main.css
+++ b/src/main.css
@@ -1,13 +1,21 @@
 * {
     box-sizing: border-box;
-  }
-
-@media screen and (max-width: 700px) {
+}
 
 body {
     width: 100%;
     margin: 0;
 }
+
+/*
+img {
+    display: block;
+    max-width: 100%;
+}
+*/
+
+@media screen and (max-width: 700px) {
+
 /*
 img .frontpage-img{
     display: flex;
@@ -23,10 +31,10 @@ img .frontpage-img{
 }
 
 header {
-    background: url(../img/background-img-medium.jpg) no-repeat center; 
+    background: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) , url(../img/background-img-medium.jpg) no-repeat center;
     background-size: cover;
-    /*filter: brightness(0.4);*/
     height: 900px;
+    /*filter: brightness(0.4);*/
     /*margin: 0;
     position: sticky;
     top: 0;
@@ -162,7 +170,7 @@ p.frontpage-text {
 
   /* about us */
 
-.about-us-img , .about-img {
+.about-img {
     display: flex;
     justify-content: center;
     height: 300px;
@@ -348,18 +356,19 @@ p , a {
 }
 
 @media screen and (min-width: 701px) {
-
-body {
-    width: 100%;
-    margin: 0;
+/*
+.main {
+    display: flex;
+    flex-direction: column;
 }
-
+*/
 .li-none {
     list-style: none;
 }
     
 /* header, nav, frontpage */
 
+/*
 img .frontpage-img{
     display: flex;
     background-size: 100%;
@@ -368,12 +377,15 @@ img .frontpage-img{
     background-attachment: fixed;
     background-position: center;
 }
-    
+*/
+
 header {
-    background: url(../img/background-img-medium.jpg) no-repeat center; 
-    /*filter: brightness(0.4);*/
     background-size: cover;
     height: 900px;
+    background: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) , url(../img/background-img-medium.jpg) no-repeat center;
+    /*filter: brightness(0.4);*/
+    /*background-size: cover;*/
+    /*height: 900px;*/
     /*margin: 0;
     position: sticky;
     top: 0;
@@ -393,6 +405,13 @@ header {
     justify-content: space-around;
     align-items: center;
 }
+
+.avatar {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    margin-top: -60px;
+  }
     
 h1 {
     padding-left: 15px;
@@ -427,6 +446,7 @@ button.btn-mobile-menu {
     width: 600px;
     top: 180px;
     right: 300px;
+    margin: 0;
     font-family: 'Barlow Semi Condensed', sans-serif;
 }
     
@@ -473,10 +493,8 @@ button.btn-mobile-menu {
     
 /* services */
 
-.frontpage-grid {
-    display: grid;
-    height: 100px;
-    /* width: 100%; */
+.services-content {
+    display: flex;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 0;
 }
@@ -530,74 +548,9 @@ button.btn-mobile-menu {
     justify-content: center;
 }
 
-.avatar {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-    margin-top: -60px;
-  }
+/* about us */
 
-  /* about us */
-
-.about-us {
-    display: grid;
-    height: 600px;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.about-us-grid-1 {
-    grid-column: 1 / 2;
-}
-
-.about-us-grid-2 {
-    grid-column: 2 / 2;
-}
-
-/*
-.about-us {
-    display: flex;
-    margin: 0;
-    height: 200px;
-    padding-left: 40px;
-    padding-right: 40px;
-}*/
-
-.about-img {
-    height: 400px;
-    width: 300px;
-}
-
- /* 
-.about-us-img , .about-img {
-    display: flex;
-    justify-content: center;
-    height: 300px;
-}*/
-
-.about-barber h2 , h3 {
-    font-family: 'Barlow Semi Condensed', sans-serif;
-    text-transform: uppercase;
-}
-
-.about-barber h2 {
-    color: rgb(191, 146, 91);
-    font-size: .85rem;
-    padding-left: 15px;
-}
-
-.about-barber h3 {
-    color: rgb(0, 0, 0);
-    font-size: 1.35rem;
-    text-align: left;
-    padding-left: 15px;
-}
-
-.about-barber p {
-    color: inherit;
-    font-size: .95rem;
-    font-family: 'Poppins';
-    padding-left: 15px;
-}
+/* calendar button */
 
 .calendar {
     display: flex;
@@ -679,13 +632,6 @@ blockquote {
     border-radius: 50%;
 }
 
-.avatar {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-    margin-top: -60px;
-}
-
 /*
 .desktop {
     display: none;
@@ -702,6 +648,8 @@ blockquote {
 .footer h2 {
     font-family: 'Barlow Semi Condensed', sans-serif;
     text-transform: uppercase;
+    margin-top: 0;
+    padding-top: 10px;
 }
 
 p.a {
